--- a/apple-pie/index.html
+++ b/apple-pie/index.html
@@ -1,21 +1,77 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Apple Pie Recipe</title>
+    <link rel="stylesheet" href="./src/styles/style.css">
     <!-- No olvides hacer link a tus styles -->
   </head>
   <body>
-    Apple Pies This was Juan Carlos apple pie recipe. I have never seen another one quite like it. It will always
-    be my favorite and has won me several first place prizes in local competitions. I hope it becomes one of your
-    favorites as well! Ingredients 1 recipe pastry for a 9 inch double crust pie 1/2 cup unsalted butter 3 tablespoons
-    all-purpose flour 1/4 cup water 3 tablespoons all-purpose flour 1/4 cup water 1/2 cup white sugar 1/2 cup packed
-    brown sugar 8 Granny Smith apples - peeled, cored and sliced Directions Preheat oven to 425 degrees F (220 degrees
-    C). Melt the butter in a saucepan. Stir in flour to form a paste. Add water, white sugar and brown sugar, and bring
-    to a boil. Reduce temperature and let simmer. Place the bottom crust in your pan. Fill with apples, mounded
-    slightly. Cover with a lattice work crust. Gently pour the sugar and butter liquid over the crust. Pour slowly so
-    that it does not run off. Bake 15 minutes in the preheated oven. Reduce the temperature to 350 degrees F (175
-    degrees C). Continue baking for 35 to 45 minutes, until apples are soft.
+    <main>
+      <h1>Apple Pie</h1>
+    </mainn><!---Apple-background-->
+
+    <section>
+
+      <div>
+        <p>
+          Apple Pies This was Juan Carlos apple pie recipe. I have never seen another one 
+          quite like it. It will always be my favorite and has won me several first place 
+          prizes in local competitions. I hope it becomes one of your.
+          favorites as well! 
+        <p>
+      </div>
+
+      <div id="información-de-la-receta">
+        <img src="./src/images/recipe-info.png" alt="información-de-la-receta" width="50%" height="50%">
+      </div>
+      <div class="line"></div>
+
+    </section><!---Presentation-->
+
+    <section id="Ingredients">
+
+      <div>
+        <h5>Ingredients </h5>
+        <ul>
+          <li>-1 recipe pastry for a 9 inch double crust pie</li>
+          <li>-1/2 cup unsalted butter </li>
+          <li>-3 tablespoons all-purpose flour </li>
+          <li>-1/4 cup water</li>
+          <li>-3 tablespoons all-purpose flour</li>
+          <li>-1/4 cup water</li>
+          <li>-1/2 cup white sugar </li>
+          <li>-1/2 cup packed brown sugar </li>
+          <li>-8 Granny Smith apples - peeled, cored and sliced </li>    
+        </ul>
+
+      </div>
+      <div id="tiempo-de-cocción">
+        <img src="./src/images/cooking-info.png" alt="tiempo-de-cocción" width="50%" height="50%">
+      </div>
+      <div class="line"></div>
+
+
+    </section><!---Ingredients-->
+
+    <section>
+
+      <div>
+        <h5>Directions</h5>
+        <p>
+          1)Preheat oven to 425 degrees F (220 degrees C). Melt the butter in a saucepan. Stir in flour to form a paste. Add water, white sugar and brown sugar, and bring
+          to a boil. Reduce temperature and let simmer.
+          <br/>2)Place the bottom crust in your pan. Fill with apples, mounded
+          slightly. Cover with a lattice work crust. Gently pour the sugar and butter liquid over the crust. Pour slowly so
+          that it does not run off.  
+          <br/>3)Bake 15 minutes in the preheated oven. Reduce the temperature to 350 degrees F (175 degrees C). Continue baking for 35 to 45 minutes, until apples are soft.
+
+
+      </div>
+      
+    </section><!---Directions-->
+
   </body>
+
 </html>
